<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_transparent"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/guideLayout"
    android:visibility="gone"
    android:orientation="vertical">

    <android.widget.Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_guide"
        android:padding="20dp"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="@color/purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        android:padding="20dp"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="@color/purple"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_section"
        android:background="@drawable/button"
        android:layout_marginBottom="100dp"
        android:textSize="24sp"
        android:padding="30dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:alpha="0"/>

    <ImageView
        android:id="@+id/pulseImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/pulse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="-10dp"
        android:layout_marginBottom="-50dp"
        android:alpha="0"/>

</androidx.constraintlayout.widget.ConstraintLayout>